# api-response-shaper

./: .pre-commit-config-ci.yaml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
response_shaper/: apps.py  decorators.py  exceptions.py  middleware.py  responses.py  types.py
response_shaper/settings/: check.py  conf.py
response_shaper/tests/: conftest.py  constants.py  setup.py  test_api_responses.py  test_decorators.py  test_exceptions.py  test_middleware.py  test_settings.py
response_shaper/validators/: config_validators.py
