[tool.poetry]
name = "api-response-shaper"
version = "0.1.0"
description = "An essential package for structuring and optimizing your API responses."
authors = ["ARYAN-NIKNEZHAD <aryan513966@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = [
  { version = ">=4.2,<5.0", python = ">=3.8,<3.10" },
  { version = ">=4.2,<5.3", python = ">=3.10" },      # Django 4.2 and 5.x for Python 3.10+
]
djangorestframework = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
